dts/testData/inspections/requiredProperty/Node.dts
/ {
    <error descr="Missing required properties: \"phy-handle\"">node</error> {
        compatible = "espressif,esp32-eth";
    };
};